syntax = "proto3";

option go_package = "github.com/ilyatos/aac-task-tracker/tracker";

import "google/api/annotations.proto";

package tracker;

service Tracker {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {
    option (google.api.http) = {
      post: "/v1/task/create"
      body: "*"
    };
  };
  rpc ReassignTasks(ReassignTasksRequest) returns (ReassignTasksResponse) {
    option (google.api.http) = {
      post: "/v1/task/reassign"
      body: "*"
    };
  };
  rpc CompleteTask(CompleteTaskRequest) returns (CompleteTaskResponse) {
    option (google.api.http) = {
      post: "/v1/task/complete"
      body: "*"
    };
  };
}

message CreateTaskRequest {
  string  description = 1;
}
message CreateTaskResponse {}

message ReassignTasksRequest {}
message ReassignTasksResponse {}

message CompleteTaskRequest {
  string  task_id = 1;
}
message CompleteTaskResponse {}